--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/pickledealer/funny/main/media/gamble.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/pickledealer/funny/main/media/gamble.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Redirect -->
